Henter ut søknadsdata via dokumentstatus (#5598)
* Henter ut søknadsdata via dokumentstatus